[tool.poetry]
name = "pipeline-converter-pdf"
version = "0.1.0"
description = ""
authors = ["Iasmim Horrana <horranaiasmim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.12.0.88"
matplotlib = "^3.10.5"
ghostscript = "^0.8.1"
pandas = "^2.3.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.43"
unidecode = "^1.4.0"
camelot-py = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
